playground/notas_tests/invalid/r2-07.hulk
function bad() => outer + 1;
let outer = 1 in print(bad());
